syntax = "proto3";

package player;

message PlayerInGameAction{
    int32 target_player_id = 1;
    
    string action_type = 2;
    string message = 3;
}

message GameEvent{
    int32 player_id = 1;
    int32 target_player_id = 2;
    string action_type = 3;
    string message = 4;
}